--- a/src/main/webapp/ng-css/editar.css
+++ b/src/main/webapp/ng-css/editar.css
@@ -1,8 +1,46 @@
-#contenido
+#editarBBDD
 {
 	float: left;
-	padding: 10% 20%;;
+	padding: 4% 16%;
 	width: 100%;
-	
+	height: 100%;
+}
+
+#editarBBDD form
+{
+	width: auto;
+    
+}
+
+#editarBBDD input
+{
+	border: 0.2px solid rgba(52, 73, 94,1.0);
+	text-align: center;
+	font-family: verdana, arial;
+	font-size: medium;
+}
+
+#editarBBDD #lista > select option
+{
+	background-color: rgba(255, 255, 255, 1);
+ 	border: 1px solid rgba(52, 152, 219,1.0);
+ 	width: auto;
+ 	height: auto;
+ 	margin-right: %;
+}
+
+#selcBBDD
+{
+	padding: 2% 28%;
+}
+
+#selcBBDD > input[type="button"]
+{
+	cursor: auto;
+	padding: 18px;
+	text-transform: uppercase;
+	background-color: rgba(255, 255, 255, 1);
+	border: 1px solid rgba(52, 152, 219,1.0);
+	border-radius: 8%;
 }
 
